/*
 * Copyright The OpenTelemetry Authors
 * SPDX-License-Identifier: Apache-2.0
 */

syntax = "proto3";

package io.opentelemetry.extension.controlplane.proto.v1;

option java_package = "io.opentelemetry.sdk.extension.controlplane.proto.v1";
option java_outer_classname = "TaskProtos";

import "controlplane/v1/common.proto";

// 任务拉取请求
message TaskRequest {
  // Agent 身份标识
  AgentIdentity agent_identity = 1;
  
  // 长轮询超时时间 (毫秒)
  int64 long_poll_timeout_millis = 2;
  
  // Agent 当前能力
  AgentCapabilities capabilities = 3;
}

// Agent 能力
message AgentCapabilities {
  // 支持的任务类型
  repeated string supported_task_types = 1;
  
  // 最大并发任务数
  int32 max_concurrent_tasks = 2;
  
  // 最大结果大小 (字节)
  int64 max_result_size_bytes = 3;
}

// 任务拉取响应
message TaskResponse {
  // 响应状态
  ResponseStatus status = 1;
  
  // 下发的任务列表
  repeated Task tasks = 2;
  
  // 下次轮询建议间隔 (毫秒)
  int64 suggested_poll_interval_millis = 3;
}

// 任务定义
message Task {
  // 任务 ID
  string task_id = 1;
  
  // 任务类型
  enum TaskType {
    TASK_TYPE_UNSPECIFIED = 0;
    TASK_TYPE_THREAD_DUMP = 1;       // 线程转储
    TASK_TYPE_HEAP_DUMP = 2;         // 堆转储
    TASK_TYPE_GC_INFO = 3;           // GC 信息
    TASK_TYPE_SYSTEM_PROPERTIES = 4; // 系统属性
    TASK_TYPE_ENV_VARIABLES = 5;     // 环境变量
    TASK_TYPE_CUSTOM = 100;          // 自定义任务
  }
  
  TaskType type = 2;
  
  // 任务参数 (JSON 格式)
  string parameters_json = 3;
  
  // 任务优先级
  enum Priority {
    PRIORITY_UNSPECIFIED = 0;
    PRIORITY_LOW = 1;
    PRIORITY_NORMAL = 2;
    PRIORITY_HIGH = 3;
  }
  
  Priority priority = 4;
  
  // 任务超时时间 (毫秒)
  int64 timeout_millis = 5;
  
  // 任务创建时间 (Unix 纳秒)
  int64 created_at_unix_nano = 6;
  
  // 任务过期时间 (Unix 纳秒)
  int64 expires_at_unix_nano = 7;
}

// 任务结果
message TaskResult {
  // 任务 ID
  string task_id = 1;
  
  // 执行状态
  enum Status {
    STATUS_UNSPECIFIED = 0;
    STATUS_SUCCESS = 1;
    STATUS_FAILED = 2;
    STATUS_TIMEOUT = 3;
    STATUS_CANCELLED = 4;
    STATUS_RESULT_TOO_LARGE = 5;  // 结果超过最大阈值
  }
  
  Status status = 2;
  
  // 任务开始时间 (Unix 纳秒)
  int64 started_at_unix_nano = 3;
  
  // 任务完成时间 (Unix 纳秒)
  int64 completed_at_unix_nano = 4;
  
  // 结果数据 (当 status 为 STATUS_RESULT_TOO_LARGE 时为空)
  bytes result_data = 5;
  
  // 结果数据类型 (MIME type)
  string result_data_type = 6;
  
  // 错误信息
  string error_message = 7;
  
  // 重试次数
  int32 retry_count = 8;
  
  // 压缩类型
  enum CompressionType {
    COMPRESSION_TYPE_NONE = 0;
    COMPRESSION_TYPE_GZIP = 1;
  }
  
  CompressionType compression = 9;
  
  // 原始大小 (字节)
  int64 original_size = 10;
  
  // 压缩后大小 (字节)
  int64 compressed_size = 11;
}

// 分片任务结果 (用于大结果上传)
message ChunkedTaskResult {
  // 任务 ID
  string task_id = 1;
  
  // 分片上传会话 ID
  string upload_id = 2;
  
  // 分片索引 (从 0 开始)
  int32 chunk_index = 3;
  
  // 总分片数
  int32 total_chunks = 4;
  
  // 分片数据
  bytes chunk_data = 5;
  
  // 分片校验和 (MD5)
  string chunk_checksum = 6;
  
  // 是否最后一片
  bool is_last_chunk = 7;
}

// 分片上传响应
message ChunkedUploadResponse {
  // 上传会话 ID
  string upload_id = 1;
  
  // 已接收的分片索引
  int32 received_chunk_index = 2;
  
  // 状态
  enum Status {
    STATUS_UNSPECIFIED = 0;
    STATUS_CHUNK_RECEIVED = 1;   // 分片已接收
    STATUS_UPLOAD_COMPLETE = 2;  // 上传完成
    STATUS_CHECKSUM_MISMATCH = 3; // 校验失败
    STATUS_UPLOAD_FAILED = 4;    // 上传失败
  }
  
  Status status = 3;
  
  // 错误信息
  string error_message = 4;
}
